Important changes from 1.7.1 => 1.7.2
============================================================
Searching for respondents by track or lack of track
Customize respondents screen using Snippets\Respondent\RespondentTableSnippet
Track structure can be exported, imported and merged with an existing track
Tracks answers, fields and rounds can be checked at the respondent and respondent track level
(Re)checking for answers now possible at the single token level
When using the gemsdata__responses table, views will be created for each survey
A new after completion event allows the setting of the informed consent through a survey
Fixed survey activation when survey not active in source
LimeSurvey equation questions now use help text for question or question code when empty
A new cron job checks whether the mail cron job has finished correctly
The check cron job is also checked before each login
Imports through the interface are logged in the activity log
The menu remains fully visible when an error occurs
Staff import now respects organization default user class
Inserted surveys now have class 'inserted' added to the row in track overview
Most search screens have been updated and all work the same

Important changes from 1.7.0 => 1.7.1
============================================================
ABOUT THE UPGRADE
    Check the upgrade compatibility report for any possible code issues!!
    Ignore any messages that a "Column does not exist in table" during the upgrade
INTERFACE EXTENSIONS
    User with the right privileges can select those respondents either with or without a track in the respondent screen
    Respondents, tracks and tokens can now be undeleted - with the admin level user right
    Manual or automatic token recalculation is now determined through an input element instead of through 'magic'
    Manual or automatic track end date recalculation is now determined through an input element instead of through 'magic'